--- a/index.html
+++ b/index.html
@@ -93,12 +93,10 @@
 </head>
 <body>
 
-  <div class="title">15% su tutti i servizi Juice!</div>
-
   <div class="card-container" onclick="this.querySelector('.card').classList.toggle('flipped')">
     <div class="card">
       <div class="card-face front">
-        <img src="https://i.postimg.cc/13wtnG1x/Juice-Card-Fronte.png" alt="Fronte Card">
+        <img src="https://i.postimg.cc/NG7dJn3N/Juice-Card-Fronte.png" alt="Fronte Card">
       </div>
       <div class="card-face back">
         <img src="https://i.postimg.cc/bw9ZVxCx/Juice-Card-Retro.png" alt="Retro Card">
@@ -106,7 +104,7 @@
     </div>
   </div>
 
-  <a href="https://instagram.com/tuoprofilo" target="_blank" class="instagram-button">Vai su Instagram</a>
+  <a href="https://www.instagram.com/juiceheadesigner/" target="_blank" class="instagram-button">Vai su Instagram</a>
 
 </body>
 </html>
